--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "node js course task",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "nodemon src/index.ts",
     "start:prod": "webpack && node dist/bundle.js"
   },
   "keywords": [],
