--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.11.16",
+    "@types/uuid": "^9.0.8",
     "clean-webpack-plugin": "^4.0.0",
     "nodemon": "^3.0.3",
     "ts-loader": "^9.5.1",
@@ -19,5 +20,8 @@
     "tslib": "^2.6.2",
     "webpack": "^5.90.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "uuid": "^9.0.1"
   }
 }
